--- a/Directives_Filtering_DataBinding/index.html
+++ b/Directives_Filtering_DataBinding/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li ng-repeat="personName in names | filter:name | orderBy:name">{{ personName }}</li>
     </ul>
+    <!-- This is the location of the CDN, used to download the angular library -->
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </body>
 </html>
