ModuleRoutesFactories: Final Commit

--- a/ModuleRoutesFactories/index.html
+++ b/ModuleRoutesFactories/index.html
@@ -4,29 +4,49 @@
 <head>
     <title>Using Directives and Views</title>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
 </head>
 <body>
+    <!-- Each click refreshes the page but with different views, hence the saved data (via add customer) dissapears -->
+    This is a SPA
     <!-- $scope is the glue between View and Controller -->
     <!-- Changes in scope by the View or Controller are reflected immediately -->
     <!-- Name of the function has to be same as the name specified in ng-controller but the function scope is limited to div tag -->
-    <div class="container" ng-controller="SimpleController">
-        <h3>Adding a Simple Controller</h3>
-        <ul>
-            <li ng-repeat="customer in customers">
-            {{ customer.name }} lives in {{customer.city }}
-            </li>
-        </ul>
+    <div>
+        <!-- Placeholders for the view -->
+        <div ng-view=""></div>
     </div>
 
     <!-- script tag can't contain HTML comments , it can only understand JS type comment -->
     <script>
         // The empty array is for dependency injection or add dependencies
-        var myModule = angular.module('myApp', []);
-        // Using anonymous function 
-        myModule.controller('SimpleController', function($scope) {
+        var myModule = angular.module("myApp", ['ngRoute']);
+
+        // $routeProvider is a variable provided by angular
+        myModule.config(function ($routeProvider) {
+            $routeProvider
+                    .when('/',
+                            {
+                                controller: 'SimpleController',
+                                templateUrl: 'Views/View1.html'
+                            })
+                    // This name view2 needs to be consistent with href in View1.html line 25
+                    .when('/view2',
+                            {
+                                controller: 'SimpleController',
+                                templateUrl: 'Views/View2.html'
+                            })
+                            .otherwise({ redirectTo: '/'});
+        });
+
+        myModule.controller("SimpleController", function ($scope) {
             $scope.customers = [{name: 'Jai', city: 'Pheonix'}, {name: 'Mohit', city: 'Bei Jing'},
                 {name: 'Bhavin', city: 'Pheonix'}, {name: 'John', city: 'Jaipur'}, {name: 'Jack', city: 'Pheonix'},
                 {name: 'Ravi', city: 'Jaipur'}, {name: 'Jd', city: 'Pheonix'}, {name: 'Backchod Billi', city: 'Jaipur'}];
+
+            $scope.addCustomer = function() {
+                $scope.customers.push({name: $scope.newCustomer.name, city: $scope.newCustomer.city});
+            }
         });
     </script>
 </body>
